--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.github.bumptech.glide:glide:3.6.0'
-    compile "com.androidplot:androidplot-core:0.9.5"
+    compile 'com.androidplot:androidplot-core:0.9.5'
     compile project(':lib:opencv')
+    compile files('C:/Users/Chung/Desktop/MagLev-master/lib/mpandroidchartlibrary-2-1-6.jar')
 }
