--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 18 17:30:35 EST 2016
+#Mon Mar 28 13:09:10 EDT 2016
 sdk.dir=C\:\\Users\\Chung\\AppData\\Local\\Android\\sdk
